--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           submodules: true
 
+      - run: sudo apt-get update && sudo apt-get install coreutils libgtest-dev libboost-dev libboost-filesystem-dev libboost-system-dev libboost-program-options-dev -y
       - name: Set up CMake
         run: cmake . -DPATCH_VERSION=${{ github.run_number }}
 
