--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,31 +3,31 @@
 set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
 set(PROJECT_VERSION 0.0.${PATCH_VERSION})
 
-project(Bayan VERSION ${PROJECT_VERSION})
+project(bayan VERSION ${PROJECT_VERSION})
 
 #configure_file(version.h.in version.h)
 
 find_package(Boost REQUIRED COMPONENTS system filesystem program_options)
 
-add_executable (Bayan "main.cpp" "main.h")
+add_executable (bayan "main.cpp" "main.h")
 
-set_target_properties(Bayan PROPERTIES
+set_target_properties(bayan PROPERTIES
     CXX_STANDARD 20
     CXX_STANDARD_REQUIRED ON
 )
-target_include_directories(Bayan PRIVATE "${CMAKE_BINARY_DIR}")
+target_include_directories(bayan PRIVATE "${CMAKE_BINARY_DIR}")
 
 if (MSVC)
-    target_compile_options(Bayan PRIVATE
+    target_compile_options(bayan PRIVATE
         /W4
     )
 else ()
-    target_compile_options(Bayan PRIVATE
+    target_compile_options(bayan PRIVATE
         -Wall -Wextra -pedantic
     )
 endif()
 
-install(TARGETS Bayan RUNTIME DESTINATION bin)
+install(TARGETS bayan RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
