--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,9 @@ jobs:
 
       - run: |
            sudo apt-get update
+           sudo apt-get install cmake
            sudo apt-get install -y libboost-all-dev
+           sudo apt-get install libboost-program-options-dev
 
       - name: Set up CMake
         run: cmake . -DPATCH_VERSION=${{ github.run_number }}
