--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build project
         run: cmake --build .
 
+      - name: Run the application
+        run: ./build/bayan
+
       - name: Create package
         run: cmake --build . --target package
 
@@ -51,28 +54,3 @@ jobs:
           asset_name: bayan-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
 
-  build-windows:
-    runs-on: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install Visual Studio Build Tools
-        run: |
-          choco install visualstudio2019buildtools -y
-          choco install visualstudio2019-workload-vctools -y
-
-      - name: Install dependencies
-        run: choco install boost-msvc-14.2
-
-      - name: Configure CMake
-        run: cmake -B build -G "Visual Studio 16 2019"
-
-      - name: Build
-        run: cmake --build build --config Release
-
-      - name: Upload Windows executable
-        uses: actions/upload-artifact@v3
-        with:
-          name: bayan-windows-${{ github.run_number }}.exe
-          path: build/Release/bayan.exe
