--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build project
         run: cmake --build .
 
+      - name: Check if executable exists
+        run: ls -l build/bayan
+
       - name: Run the application
         run: ./build/bayan
 
