--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Build project
         run: cmake --build .
 
-      - name: Check if executable exists
-        run: ls -l build/bayan
+      - name: Find executable
+        run: find / -name bayan 2>/dev/null
 
       - name: Run the application
         run: ./build/bayan
