fix in release.yml for 'Run the application'

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,8 +30,9 @@ jobs:
         run: find / -name bayan 2>/dev/null
 
       - name: Run the application
-        run: chmod +x /home/runner/work/Otus-Cpp-2024-HW-8-Boost/Otus-Cpp-2024-HW-8-Boost/bayan
-        run: /home/runner/work/Otus-Cpp-2024-HW-8-Boost/Otus-Cpp-2024-HW-8-Boost/bayan
+        run: |
+           chmod +x /home/runner/work/Otus-Cpp-2024-HW-8-Boost/Otus-Cpp-2024-HW-8-Boost/bayan
+           /home/runner/work/Otus-Cpp-2024-HW-8-Boost/Otus-Cpp-2024-HW-8-Boost/bayan
 
       - name: Create package
         run: cmake --build . --target package
