Use github.workspace instead of hard path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,10 @@ jobs:
 
       - name: Run the application
         run: |
-           chmod +x /home/runner/work/Otus-Cpp-2024-HW-8-Boost/Otus-Cpp-2024-HW-8-Boost/bayan
-           /home/runner/work/Otus-Cpp-2024-HW-8-Boost/Otus-Cpp-2024-HW-8-Boost/bayan
+           EXECUTABLE_PATH="${{ github.workspace }}/bayan"
+           echo "Executable path: $EXECUTABLE_PATH"
+           chmod +x EXECUTABLE_PATH
+           $EXECUTABLE_PATH
 
       - name: Create package
         run: cmake --build . --target package
