Run executable with parameter --help

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Run the application
         run: |
            EXECUTABLE_PATH="${{ github.workspace }}/bayan"
-           echo "Executable path: $EXECUTABLE_PATH"
+           #echo "Executable path: $EXECUTABLE_PATH"
            chmod +x "${EXECUTABLE_PATH}"
-           "${EXECUTABLE_PATH}"
+           "${EXECUTABLE_PATH}" --help
 
       - name: Create package
         run: cmake --build . --target package
