remove option help when Run executable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
            EXECUTABLE_PATH="${{ github.workspace }}/bayan"
            #echo "Executable path: $EXECUTABLE_PATH"
            chmod +x "${EXECUTABLE_PATH}"
-           "${EXECUTABLE_PATH}" --help
+           "${EXECUTABLE_PATH}"
 
       - name: Create package
         run: cmake --build . --target package
