--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,11 @@ jobs:
           submodules: true
 
       - run: |
-           sudo apt-get update
-           sudo apt-get install cmake
-           sudo apt-get install -y libboost-all-dev
-           sudo apt-get install libboost-program-options-dev
+            sudo apt-get update
+            sudo apt-get install -y software-properties-common
+            sudo add-apt-repository ppa:mhier/libboost-latest -y
+            sudo apt-get update
+            sudo apt-get install -y libboost1.74-all-dev
 
       - name: Set up CMake
         run: cmake . -DPATCH_VERSION=${{ github.run_number }}
